--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body{
 .api-output {
   position: relative;
   left: 80px;
-  top: 12.5px;
+  top: 10px;
   height: 20px;
   width: 200px;
   background-color: white;
@@ -27,8 +27,9 @@ body{
 
 #api-btn{
   position: relative;
-  left: -75px;
-  display: inline;
+  top: -10px;
+  left:  0px;
+  margin-left: 5px;
 }
 
 /*ADDERA BÖCKER*/
