--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body{
   background-color: lightgray;
   margin: 100px auto;
 }
-/*API SEKTIONEN -- ALL KOD */
+/*API SEKTIONEN -- ALL KOD **/
 .api-output {
   position: relative;
   left: 80px;
