--- a/main.css
+++ b/main.css
@@ -60,12 +60,13 @@ body{
   margin: 0;
   position: relative;
   width: 100%;
-  height: 500px;
+  /*height: 500px;*/
   margin: 10px 0 10px 0;
 }
 
 .outputBooks{
     margin: 0;
+    padding: 0 0 30px 0;
     font-family: 'Montserrat';
     color: white;
     width: 90%;
