--- a/main.css
+++ b/main.css
@@ -255,11 +255,16 @@ ul{
   }
 }
 
-@media screen and (max-width: 429px) and (min-width: 300px){
-  .change-container{
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
+  @media screen
+  and (device-width: 360px)
+  and (device-height: 640px)
+  and (-webkit-device-pixel-ratio: 3)
+  and (orientation: portrait) {
+    .navigation {
+      -webkit-flex-flow: column wrap;
+      flex-flow: column wrap;
+      padding: 0;
+    }
   .change-container input{
     position: relative;
     margin: 2px 0 0 0;
