--- a/main.css
+++ b/main.css
@@ -61,7 +61,8 @@ body{
   margin: 0;
   position: relative;
   width: 100%;
-  height: 500px;
+  /*height: 500px;*/
+  padding-bottom: 20px;
   margin: 10px 0 10px 0;
 }
 
@@ -78,7 +79,6 @@ body{
   flex-wrap: wrap;
   justify-content: flex-start;
   margin: 0 0 5px 0;
-  position: absolute;
   bottom: 0;
 }
 .change-container input{
@@ -90,10 +90,6 @@ body{
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: flex-end;
-  position: absolute;
-  bottom: 0;
-  right: 0;
   margin: 0 0px 5px 2px;
 }
 
@@ -112,6 +108,20 @@ body{
   text-decoration: none;
   color: white;
   background-color: #008CBA;
+}
+
+/*** INPUT WRAP CONTAINER ***/
+.input-wrap-container{
+  /*display: inline-block */
+}
+.delete-container-end{
+  /*display: flex;
+  justify-content: flex-end;*/
+}
+.main-input-wrap{
+  padding-top: 20px;
+  display: flex;
+  justify-content: space-between;
 }
 
 /*** SERACH GOOGLE BOOKS ***/
@@ -258,6 +268,9 @@ ul{
     flex-direction: column;
     flex-wrap: nowrap;
   }
+  .main-input-wrap{
+    flex-direction: column;
+  }
   .change-container input{
     position: relative;
     margin: 2px 0 0 0;
@@ -278,16 +291,16 @@ ul{
     margin: 0 auto;
   }
   .change-container{
-    width: 95%;
+    /*width: 95%;*/
     bottom: 45px;
   }
   .container-library{
     display: flex;
+    flex-direction:column;
     justify-content: center;
   }
   .delete-container{
-
-    width: 95%;
+  /*width: 95%;*/
     margin: 0 0 0 0;
     right: auto;
     flex-direction: column;
